...

                    <Space
                        android:layout_width="@dimen/normal_padding"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/spn_pos1"
                        style="@style/spinner_app_eval"
                        android:contentDescription="pos1"/>

                    <Space
                        android:layout_width="@dimen/normal_padding"
                        android:layout_height="wrap_content" />

                    <EditText
...

                    <Space
                        android:layout_width="@dimen/normal_padding"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/spn_pos2"
                        style="@style/spinner_app_eval"
                        android:contentDescription="pos2"/>

                    <Space
                        android:layout_width="@dimen/normal_padding"
                        android:layout_height="wrap_content" />

                    <EditText
...

                    <Space
                        android:layout_width="@dimen/normal_padding"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/spn_pos3"
                        style="@style/spinner_app_eval"
                        android:contentDescription="pos3"/>

                    <Space
                        android:layout_width="@dimen/normal_padding"
                        android:layout_height="wrap_content" />

                    <EditText
...

                    <Space
                        android:layout_width="@dimen/normal_padding"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/spn_pos4"
                        android:contentDescription="pos4"
                        style="@style/spinner_app_eval" />

                    <Space
                        android:layout_width="@dimen/normal_padding"
                        android:layout_height="wrap_content" />

...

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/big_margin" />

                <Button
                    android:id="@+id/btn_next"
                    style="@style/default_app_boton"
                    android:textAllCaps="true"
                    android:contentDescription="esp5f0"
                    android:text="@string/text_next"/>

                <Button
                    android:id="@+id/btn_finish"
                    style="@style/default_app_boton"
                    android:contentDescription="btnFinishStepEval5"
                    android:textAllCaps="true"
                    android:text="@string/text_terminate"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/big_margin" />
...
